commenting out sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Diversified Electrical Technologies</title>
 		<meta charset="utf-8" />
+		<meta name="google" content="notranslate" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -42,7 +43,7 @@
 			</section>
 
 		<!-- Highlights -->
-			<section class="wrapper">
+			<!-- <section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Sem turpis amet semper</h2>
@@ -105,18 +106,18 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- CTA -->
-			<section id="cta" class="wrapper">
+			<!-- <section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Curabitur ullamcorper ultricies</h2>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Testimonials -->
-			<section class="wrapper">
+			<!-- <section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Faucibus consequat lorem</h2>
@@ -164,14 +165,17 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>Accumsan montes viverra</h3>
+							<h3><img 	src="/assets/fonts/DET-logo-text.svg"
+										height="87px"
+										width="100"/>Accumsan montes viverra
+							</h3>
 							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 						</section>
 						<section>
