configurtion.  changing content in index.  icon color

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Industrious by TEMPLATED
 	templated.co @templatedco
@@ -43,68 +43,86 @@
 			</section>
 
 		<!-- Highlights -->
-			<!-- <section class="wrapper">
+			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>The kind of jobs we do</h2>
+						<p>Our name says it; Diversified. We have expertise in many different areas and pride our selves in maintaining the highest quality standards.</p>
 					</header>
-					<div class="highlights">
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Feugiat consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-						<section>
-							<div class="content">
-								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
-								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-							</div>
-						</section>
-					</div>
+                    <div class="highlights">
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+                                    <h3>Parking Decks</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
+                                    <h3>Commercial</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
+                                    <h3>Medical</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
+                                    <h3>Lighting Retrofit</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
+                                    <h3>Mission Critical</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+                                    <h3>Hospitality</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+                                    <h3>Retail</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="content">
+                                <header>
+                                    <a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+                                    <h3>Senior Living</h3>
+                                </header>
+                                <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                            </div>
+                        </section>
+                    </div>
 				</div>
 			</section> -->
 
