added password. commented out Connect with Us section

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Diversified Electrical Technologies</h1>
-					<p>Commercial electrical contractor serving south and central US</p>
+					<p>We are a commercial electrical contractor serving south and central US</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
 
 		<!-- Highlights -->
 			<section class="wrapper">
-				<div class="inner">
-					<header class="special">
-						<h2>The kind of jobs we do</h2>
-						<p>Our name says it; Diversified. We have expertise in many different areas and pride our selves in maintaining the highest quality standards.</p>
-					</header>
+                <div class="inner">
+                    <header class="special">
+                        <h2>The kind of jobs we do and services</h2>
+                        <p>Our name says it; Diversified. We have expertise in many different areas and pride our selves in maintaining the highest quality standards.</p>
+                    </header>
                     <div class="highlights">
                         <section>
                             <div class="content">
@@ -123,7 +123,10 @@
                             </div>
                         </section>
                     </div>
-				</div>
+                    <header class="special">                        
+                        <p>We are licensed in several states including, but not limited to NC, SC, VA, MS, TX, KY.</p>
+                    </header>
+                </div>
 			</section> -->
 
 		<!-- CTA -->
@@ -192,31 +195,32 @@
 						<section>
 							<h3><img 	src="/assets/fonts/DET-logo-text.svg"
 										height="120px"
-										width="220"/>Accumsan montes viverra
+										width="220"/>We are looking for you:
 							</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+							<p>We are currently seeking experienced Project Manager, Estimators, and Designers. DET is an exciting place to work and we are growing!.</p>
 						</section>
 						<section>
-							<h4>Sem turpis amet semper</h4>
+							<h4>Contact Us:</h4>
 							<ul class="alt">
-								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
+								<li><a href="#">8200 Depot St.<br />
+                                                Rural Hall, NC. 27045</a></li>
 								<li><a href="#">Etiam vel lorem sed amet.</a></li>
 								<li><a href="#">Felis enim feugiat viverra.</a></li>
-								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
+								<li><a href="#">Ph: 336-922-6351</a></li>
 							</ul>
 						</section>
-						<section>
-							<h4>Magna sed ipsum</h4>
+						<!--<section>
+							<h4>Connect with Us</h4>
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
-						</section>
+						</section>-->
 					</div>
 					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+						&copy; Diversified Electrical Technologies. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
 					</div>
 				</div>
 			</footer>
